--- a/account.html
+++ b/account.html
@@ -54,14 +54,17 @@
 		
 		<div class="container">
 			
-			<h1>Account</h1>
+			<h1 class="text-center">&middot; Account &middot;</h1>
+			
+			<p>Name: Charles Fries <a href="#">(Edit)</a></p>
+			<p>Email: charliefries@icloud.com <a href="#">(Edit)</a></p>
+			<p>Username: charlesfries <a href="#">(Edit)</a></p>
+			<p>Password: <a href="#">Change</a></p>
+			
+			
+			<a class="btn btn-danger btn-xs" href="#" role="button">Delete Account</a>
 			
 			<br>
-			
-			<p>Name: Charles Fries</p>
-			<p>Email: charliefries@icloud.com</p>
-			<p>Username: charlesfries</p>
-			<p>Password: <a href="#">Change</a></p>
 			
 			<br>
 			
