--- a/collection.html
+++ b/collection.html
@@ -54,23 +54,10 @@
 		
 		<div class="container">
 			
-			<h1>Collection</h1>
+			<h1 class="text-center">&middot; Collection &middot;</h1>
 			
-			<br>
 			
-			<!-- Split button -->
-			<div class="btn-group">
-				<button type="button" class="btn btn-success btn-sm">Add</button>
-				<button type="button" class="btn btn-success dropdown-toggle btn-sm" data-toggle="dropdown" aria-expanded="false">
-					<span class="caret"></span>
-					<span class="sr-only">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">Add SoundCloud</a></li>
-					<li><a href="#">Add Spotify</a></li>
-					<li><a href="#">Add YouTube</a></li>
-				</ul>
-			</div>
+			<button type="button" class="btn btn-success">Add</button>
 			
 			<br>
 			
@@ -81,7 +68,7 @@
 					<table class="table table-striped table-condensed">
 						<thead>
 							<tr>
-								<th>#</th>
+								<th></th>
 								<th>Track</th>
 								<th>Artist</th>
 								<th>Time</th>
@@ -92,7 +79,7 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>1</td>
+								<th><a href="#" target="blank"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></th>
 								<td>The Blacker the Berry</td>
 								<td>Kendrick Lamar</td>
 								<td>5:32</td>
@@ -101,20 +88,20 @@
 								<td>#</td>
 							</tr>
 							<tr>
-								<td>2</td>
-								<td>The Blacker the Berry</td>
-								<td>Kendrick Lamar</td>
-								<td>5:32</td>
-								<td>The Blacker the Berry</td>
+								<th><a href="#" target="blank"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></th>
+								<td>Tree of Life</td>
+								<td>Ab-Soul</td>
+								<td>5:37</td>
+								<td>These Days...</td>
 								<td>1 day ago</td>
 								<td>#</td>
 							</tr>
 							<tr>
-								<td>3</td>
-								<td>The Blacker the Berry</td>
-								<td>Kendrick Lamar</td>
-								<td>5:32</td>
-								<td>The Blacker the Berry</td>
+								<th><a href="#" target="blank"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> &nbsp;<a href="#" target="blank"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></th>
+								<td>Fire Squad</td>
+								<td>J. Cole</td>
+								<td>4:48</td>
+								<td>2014 Forest Hills Drive</td>
 								<td>1 day ago</td>
 								<td>#</td>
 							</tr>
@@ -125,7 +112,7 @@
 					
 					<form>
 						<div class="form-group">
-							<input type="text" class="form-control" id="exampleInputName2" placeholder="Search">
+							<input type="text" class="form-control" id="exampleInputName2" placeholder="Filter">
 						</div>
 					</form>
 					
