--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="">
 		<!--<link rel="icon" href="../../favicon.ico">-->
 		
-		<title>Discover - Near</title>
+		<title>Downloads - Near</title>
 		
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		
@@ -41,7 +41,8 @@
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="collection.html">Collection</a></li>
-						<li class="active"><a href="discover.html">Discover</a></li>
+						<li><a href="discover.html">Discover</a></li>
+						<li class="active"><a href="downloads.html">Downloads</a></li>
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
@@ -54,25 +55,7 @@
 		
 		<div class="container">
 			
-			<h1 class="text-center">&middot; Discover &middot;</h1>
-			
-			<br>
-			<!-- Single button -->
-			<div class="btn-group">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Trending <span class="caret"></span></button>
-				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">Trending</a></li>
-					<li><a href="#">Recommendations</a></li>
-					<li class="divider"></li>
-					<li><a href="#">Country</a></li>
-					<li><a href="#">Electronic</a></li>
-					<li><a href="#">Hip-Hop/Rap</a></li>
-					<li><a href="#">House</a></li>
-					<li><a href="#">Rock</a></li>
-				</ul>
-			</div>
-			
-			<br>
+			<h1>Downloads</h1>
 			
 			<br>
 			
