--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<!--<link rel="icon" href="../../favicon.ico">-->
 		
 		<title>Near</title>
 		
@@ -42,12 +41,24 @@
 					<ul class="nav navbar-nav">
 						<li><a href="collection.html">Collection</a></li>
 						<li><a href="discover.html">Discover</a></li>
-						<li><a href="downloads.html">Downloads</a></li>
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="signin.html">Sign In</a></li>
 						<li><a href="signup.html">Sign Up</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#">Company</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Downloads</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Careers</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Forums</a></li>
+								<li><a href="#">Help Center</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -82,7 +93,7 @@
 			</div>
 			
 			<br>
-	  
+			
 			<ol class="breadcrumb">
 				<li class="active">Home</li>
 			</ol>
