--- a/signup.html
+++ b/signup.html
@@ -42,6 +42,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="collection.html">Collection</a></li>
 						<li><a href="discover.html">Discover</a></li>
+						<li><a href="downloads.html">Downloads</a></li>
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
